added a test class

--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
     color: #fff;
 }
 
+/* Added comment */
+
+.test-class {
+    background-color: red;
+}
+
 .section {
     padding-top: 100px;
 }
